--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ function function_fade_in(opacity_value) {
 
 //keep code handy for when we want to insert the new message --
 function newMessage(){
-myElement.innerHTML = '<h2>Hope you have a spectacular day!</h2>';	
+myElement.innerHTML = '<h2> Your existence lights up the universe! 🌟Here is to Celebrating you 🎁🥳 </h2>';	
 fade_in_button();
 }
 
