--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ var myElement = document.querySelector('#message');
 
 if (!theName){
 	theName="";
-	myElement.innerHTML = '<h1>Happy Birthday, Chinaza! 🎉</h1>'
+	myElement.innerHTML = '<h1>Happy Birthday, Chidopumpin! 🎉</h1>'
 }else{
 theNewName = theName.replace(/%20/g, ' '); //oooo a regular exp!
 //alert(theNewName); 
@@ -345,8 +345,7 @@ eh=myElement.clientHeight;
 myElement.style.top =((ch/2)-(eh/2))+'px'; 
 
 
-//fade in/fade out code from here: http://codereview.stackexchange.com/questions/7315/fade-in-and-fade-out-in-pure-javascript
-//modified by trish ladd
+
 setTimeout(fade_out_button, 7000);
 
 var done = true;
