Happy Birthday Christabel

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ var myElement = document.querySelector('#message');
 
 if (!theName){
 	theName="";
-	myElement.innerHTML = '<h1>Happy Birthday, Gift Chidinma! 🎉</h1>'
+	myElement.innerHTML = '<h1>Happy Birthday, Obiora Christabel! 🎉</h1>'
 }else{
 theNewName = theName.replace(/%20/g, ' '); //oooo a regular exp!
 //alert(theNewName); 
